<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:horizontalSpacing="16dp"
    android:verticalSpacing="16dp"
    android:layout_height="match_parent"
    tools:context="com.maximbravo.bakeit.RecipesActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipes_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
