<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/recipe_card"
    android:layout_margin="8dp"
    android:background="@color/recipe_color"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="wrap_content"
        android:textSize="30dp"
        android:text="Open Seasame"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/recipe_description"
        android:textSize="16dp"
        android:text="Serving: 3 "
        android:layout_gravity="center"
        android:padding="5dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>