<resources>
    <string name="app_name">BakeIt</string>
    <string name="appwidget_text">Come BakeIt!!</string>
    <string name="add_widget">Add widget</string>
</resources>
