<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <TextView
        android:background="@color/selected_background"
        android:id="@+id/ingredient_list"
        android:layout_width="match_parent"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
      />

</RelativeLayout>