<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="10dp"
    android:elevation="3dp"
    android:background="@color/recipe_color"

    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginBottom="8dp"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/step_id"
        android:elevation="10dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="30sp"
        android:text="1"
        android:paddingLeft="10dp"
        android:paddingRight="15dp"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/step_short_description"
            android:layout_width="match_parent"
            android:elevation="2dp"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:text="Example description"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/step_description"
            android:text="example description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>